Copied ECE template files

--- a/build-config.json
+++ b/build-config.json
@@ -36,6 +36,11 @@
             "task" : "fonts",
             "source": "./src/fonts/**/*.*",
             "build" : "./docs/includes/fonts/"
+        },
+        {
+            "task" : "template",
+            "source": "./template-ece/docs/includes/**/*.*",
+            "build" : "./docs/includes/template-ece/"
         }
     ],
     "browserSync" : {
